--- a/QareebApp/_Imports.razor
+++ b/QareebApp/_Imports.razor
@@ -5,6 +5,11 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
-@using QareebApp
 @using QareebApp.Shared
+@using System.Web
+@using QareebApp
+@using QareebApp.Helpers
+@using QareebApp.Services
+@using Qareeb.Shared.Models;
