--- a/QareebApp/App.razor
+++ b/QareebApp/App.razor
@@ -1,7 +1,7 @@
 @inject NavigationManager NavigationManager
 <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
     <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        <AppRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
     <NotFound>
         @{
