--- a/QareebApp/Pages/TestRealtime.razor
+++ b/QareebApp/Pages/TestRealtime.razor
@@ -1,9 +1,8 @@
-﻿@page "/orders"
+﻿@page "/TestRealtime"
 @inject IOrderService orderService
 @inject HttpClient httpClient
 @inject IAuthenticationService authenticationService
 @implements IAsyncDisposable
-@using Qareeb.Shared.Entities
 
 <h3>Order</h3>
 <div class="card mt-4">
