--- a/QareebApp/_Imports.razor
+++ b/QareebApp/_Imports.razor
@@ -14,4 +14,5 @@
 @using QareebApp.Services
 @using QareebApp.Pages
 @using Qareeb.Shared.Models;
+@using Qareeb.Shared.Entities;
 @using Microsoft.AspNetCore.SignalR.Client
