--- a/QareebApp/_Imports.razor
+++ b/QareebApp/_Imports.razor
@@ -13,6 +13,8 @@
 @using QareebApp.Helpers
 @using QareebApp.Services
 @using QareebApp.Pages
+@using QareebApp.Features
+@using QareebApp.Components
 @using Qareeb.Shared.Models;
 @using Qareeb.Shared.Entities;
 @using Microsoft.AspNetCore.SignalR.Client
