--- a/QareebApp/Shared/NavMenu.razor
+++ b/QareebApp/Shared/NavMenu.razor
@@ -21,8 +21,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="Orders">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Orders
             </NavLink>
         </li>
         @if (AuthenticationService.User != null)
