--- a/QareebApp/wwwroot/css/app.css
+++ b/QareebApp/wwwroot/css/app.css
@@ -42,9 +42,60 @@ a, .btn-link {
     z-index: 1000;
 }
 
-    #blazor-error-ui .dismiss {
-        cursor: pointer;
-        position: absolute;
-        right: 0.75rem;
-        top: 0.5rem;
-    }
+#blazor-error-ui .dismiss {
+    cursor: pointer;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.5rem;
+}
+
+.pagging-section {
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+
+.pagging-numbers {
+    padding-left: 10px;
+    padding-right: 10px;
+    word-spacing: 1px;
+}
+
+/* Buttons End */
+.pagging {
+    width: 35px;
+    height: 35px;
+    background-color: #3a0647;
+    border-radius: 25px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 500;
+    direction: var(--direction-rtl);
+    color: #ffffff;
+    outline: none;
+    border: none;
+    margin: 0 3px;
+    box-shadow: 0 3px 5px 0 rgb(76 132 255 / 10%);
+    transition: all .2s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+}
+
+
+.pagging:focus {
+  outline: none;
+}
+
+.pagging-numbers span {
+    font-weight: 600;
+    color: #008EE0;
+}
+.active-page {
+    background-color: #05173d;
+    color: #fff;
+    outline: none;
+}
