--- a/QareebApp/Pages/Auth/Login.razor
+++ b/QareebApp/Pages/Auth/Login.razor
@@ -9,7 +9,8 @@
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="card">
-                    <div class="card-header">Login</div> <div class="card-body">
+                    <div class="card-header">Login</div>
+                    <div class="card-body">
                         <EditForm Model="@model" OnValidSubmit="HandleValidSubmit">
                             <div class="form-group row">
                                 <label for="UserName" class="col-md-12 col-form-label">Username</label>
