--- a/QareebApp/Shared/NavMenu.razor
+++ b/QareebApp/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
             <NavLink class="nav-link" href="Orders">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Orders
             </NavLink>
+        </li> 
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="Drivers">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Drivers
+            </NavLink>
         </li>
         @if (AuthenticationService.User != null)
         {
