--- a/QareebApp/_Imports.razor
+++ b/QareebApp/_Imports.razor
@@ -15,6 +15,7 @@
 @using QareebApp.Pages
 @using QareebApp.Features
 @using QareebApp.Components
-@using Qareeb.Shared.Models;
-@using Qareeb.Shared.Entities;
+@using Qareeb.Shared.Models
+@using Qareeb.Shared.Entities
 @using Microsoft.AspNetCore.SignalR.Client
+@using Microsoft.Extensions.Configuration
