--- a/QareebApp/Pages/Drivers/Create.razor
+++ b/QareebApp/Pages/Drivers/Create.razor
@@ -1,5 +1,5 @@
-﻿@page "/adminusers/create"
-@inject IAdminUserService adminUserService
+﻿@page "/drivers/create"
+@inject IDriverService driverService
 @inject NavigationManager NavigationManager
 
 <div class="card bg-white">
@@ -39,20 +39,6 @@
                     <ValidationMessage For="@(() => model.Image)" />
                 </div>
             </div>
-            <div class="form-group row">
-                <label for="Name" class="col-md-12 col-form-label">UserName</label>
-                <div class="col-md-12">
-                    <InputText @bind-Value="model.UserName" class="form-control" id="UserName" />
-                    <ValidationMessage For="@(() => model.UserName)" />
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="password" class="col-md-12 col-form-label">Password</label>
-                <div class="col-md-12">
-                    <InputText type="password" @bind-Value="model.Password" class="form-control" id="password" />
-                    <ValidationMessage For="@(() => model.Password)" />
-                </div>
-            </div>
             <div class="form-group row mb-0">
                 <div class="col-md-12">
                     <button type="submit" class="btn btn-success">
@@ -70,7 +56,7 @@
 
 @code {
     private bool loading;
-    protected CreateAdminForm model = new CreateAdminForm();
+    protected CreateDriverForm model = new CreateDriverForm();
     private string error;
 
     private async Task HandleValidSubmit()
@@ -78,10 +64,10 @@
         try
         {
             loading = true;
-            var reponses = await adminUserService.Create(model);
+            var reponses = await driverService.Create(model);
             if (reponses != null)
             {
-                NavigationManager.NavigateTo("/adminUsers");
+                NavigationManager.NavigateTo("/drivers");
             }
         }
         catch (Exception ex)
