--- a/QareebApp/Pages/Auth/Login.razor
+++ b/QareebApp/Pages/Auth/Login.razor
@@ -11,6 +11,10 @@
                 <div class="card">
                     <div class="card-header">Login</div>
                     <div class="card-body">
+                        @if (!string.IsNullOrEmpty(error))
+                        {
+                            <div class="alert alert-danger mt-3 mb-0">@error</div>
+                        }
                         <EditForm Model="@model" OnValidSubmit="HandleValidSubmit">
                             <div class="form-group row">
                                 <label for="UserName" class="col-md-12 col-form-label">Username</label>
@@ -31,7 +35,7 @@
                                     <button type="submit" class="btn btn-primary">
                                         Login @if (loading)
                                         {
-                                            <span class="spinner-border"></span>
+                                           <Spinner />
                                         }
                                     </button>
                                 </div>
