--- a/QareebApp/Pages/Drivers/Create.razor
+++ b/QareebApp/Pages/Drivers/Create.razor
@@ -10,6 +10,10 @@
         </h5>
     </div>
     <div class="card-body">
+        @if (!string.IsNullOrEmpty(error))
+        {
+            <div class="alert alert-danger mt-3 mb-0">@error</div>
+        }
         <EditForm Model="@model" OnValidSubmit="HandleValidSubmit">
             <div class="form-group row">
                 <label for="Name" class="col-md-12 col-form-label">Name</label>
@@ -44,7 +48,7 @@
                     <button type="submit" class="btn btn-success">
                         Add @if (loading)
                         {
-                            <span class="spinner-border"></span>
+                            <Spinner />
                         }
                     </button>
                 </div>
