--- a/QareebApp/_Imports.razor
+++ b/QareebApp/_Imports.razor
@@ -19,3 +19,4 @@
 @using Qareeb.Shared.Entities
 @using Microsoft.AspNetCore.SignalR.Client
 @using Microsoft.Extensions.Configuration
+@using MudBlazor
