--- a/QareebApp/Pages/Auth/Login.razor
+++ b/QareebApp/Pages/Auth/Login.razor
@@ -4,55 +4,30 @@
 @inject NavigationManager NavigationManager
 @layout AuthLayout
 
-<main class="py-4 pt-5 mt-5">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-header">Login</div>
-                    <div class="card-body">
-                        @if (!string.IsNullOrEmpty(error))
-                        {
-                            <div class="alert alert-danger mt-3 mb-0">@error</div>
-                        }
-                        <EditForm Model="@model" OnValidSubmit="HandleValidSubmit">
-                            <div class="form-group row">
-                                <label for="UserName" class="col-md-12 col-form-label">Username</label>
-                                <div class="col-md-12">
-                                    <InputText @bind-Value="model.UserName" class="form-control" name="UserName" />
-                                    <ValidationMessage For="@(() => model.UserName)" />
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="password" class="col-md-12 col-form-label">Password</label>
-                                <div class="col-md-12">
-                                    <InputText type="password" @bind-Value="model.Password" class="form-control" name="password" />
-                                    <ValidationMessage For="@(() => model.Password)" />
-                                </div>
-                            </div>
-                            <div class="form-group row mb-0">
-                                <div class="col-md-12">
-                                    <button type="submit" class="btn btn-primary">
-                                        Login @if (loading)
-                                        {
-                                           <Spinner />
-                                        }
-                                    </button>
-                                </div>
-                            </div>
-                        </EditForm>
-                    </div>
-                </div>
-            </div>
-        </div>
+<MudText Typo="Typo.h4" GutterBottom="true">Sign In</MudText>
+<MudForm Model="model" @onsubmit="HandleValidSubmit" >
+    <MudText>Don't have an account? <MudLink Href="/pages/authentication/register">Sign Up</MudLink></MudText>
+
+    <MudTextField @bind-Value="@model.UserName" Label="UserName" Variant="Variant.Outlined" Class="my-6"></MudTextField>
+
+    <MudTextField @bind-Value="@model.Password" Label="Password" Variant="Variant.Outlined" InputType="@PasswordInput" Adornment="Adornment.End" AdornmentIcon="@PasswordInputIcon" OnAdornmentClick="TogglePasswordVisibility" />
+
+    <div Class="d-flex justify-space-between align-center">
+        <MudCheckBox T="bool" Label="Remember me?" Color="Color.Primary" Class="ml-n1 my-3"></MudCheckBox>
+        <MudLink Href="/pages/authentication/forgot-password" Class="ml-n1 my-3" >Forgot pwd?</MudLink>
     </div>
-</main>
+    <MudButton Variant="Variant.Filled" Color="Color.Primary" ButtonType="ButtonType.Submit" Size="Size.Large" FullWidth="true" >Sign In</MudButton>
+</MudForm>
 
 
 @code {
     private AdminUserLoginRequest model = new AdminUserLoginRequest();
     private bool loading;
     private string error;
+
+    bool PasswordVisibility;
+    InputType PasswordInput = InputType.Password;
+    string PasswordInputIcon = Icons.Material.Filled.VisibilityOff;
 
     protected override void OnInitialized()
     {
@@ -77,6 +52,22 @@
             error = ex.Message;
             loading = false;
             StateHasChanged();
+        }
+    }
+
+    void TogglePasswordVisibility()
+    {
+        @if (PasswordVisibility)
+        {
+            PasswordVisibility = false;
+            PasswordInputIcon = Icons.Material.Filled.VisibilityOff;
+            PasswordInput = InputType.Password;
+        }
+        else
+        {
+            PasswordVisibility = true;
+            PasswordInputIcon = Icons.Material.Filled.Visibility;
+            PasswordInput = InputType.Text;
         }
     }
 }
