--- a/QareebApp/Shared/NavMenu.razor
+++ b/QareebApp/Shared/NavMenu.razor
@@ -1,52 +1,16 @@
 ﻿@inject IAuthenticationService AuthenticationService
 @inject NavigationManager NavigationManager
+<PersonCard Style="background-color: var(--mud-palette-drawer-background);color: var(--mud-palette-drawer-text);" />
+<MudDivider Class="mb-4" />
+<MudNavMenu>
+    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Personal</MudText>
+    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
+    @*<MudNavLink Href="/personal/account" Icon="@Icons.Material.Outlined.Person">Account</MudNavLink>*@
 
-<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Qareeb App</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
+    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Admin</MudText>
+    <MudNavLink Href="/adminusers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.AdminPanelSettings">Users</MudNavLink>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="adminUsers">
-                <span class="oi oi-people" aria-hidden="true"></span> Admin Users
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Orders">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Orders
-            </NavLink>
-        </li> 
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Drivers">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Drivers
-            </NavLink>
-        </li>
-        @if (AuthenticationService.User != null)
-        {
-            <!-- nav -->
-            <li class="nav-item px-3">
-                <NavLink href="logout" class="nav-item nav-link">Logout</NavLink>
-            </li>
-        }
-    </ul>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
+    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Opertions</MudText>
+    <MudNavLink Href="/drivers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.TwoWheeler">Drivers</MudNavLink>
+    <MudNavLink Href="/orders" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.ShoppingCart">Orders</MudNavLink>
+</MudNavMenu>
