--- a/QareebApp/Shared/NavMenu.razor
+++ b/QareebApp/Shared/NavMenu.razor
@@ -8,9 +8,9 @@
     @*<MudNavLink Href="/personal/account" Icon="@Icons.Material.Outlined.Person">Account</MudNavLink>*@
 
     <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Admin</MudText>
-    <MudNavLink OnClick='()=>NavigationManager.NavigateTo("adminusers")' Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.AdminPanelSettings">Users</MudNavLink>
+    <MudNavLink Href="adminusers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.AdminPanelSettings">Users</MudNavLink>
 
     <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Opertions</MudText>
-    <MudNavLink Href="/drivers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.TwoWheeler">Drivers</MudNavLink>
-    <MudNavLink Href="/orders" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.ShoppingCart">Orders</MudNavLink>
+    <MudNavLink Href="drivers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.TwoWheeler">Drivers</MudNavLink>
+    <MudNavLink Href="orders" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Outlined.ShoppingCart">Orders</MudNavLink>
 </MudNavMenu>
