--- a/QareebApp/Pages/AdminUsers/AdminIndex.razor
+++ b/QareebApp/Pages/AdminUsers/AdminIndex.razor
@@ -1,5 +1,6 @@
 ﻿@page "/adminusers"
 @inject IAdminUserService adminUserService
+@inject NavigationManager NavigationManager
 
 <MudGrid>
     <MudItem>
@@ -14,19 +15,24 @@
     <ToolBarContent>
         <MudText Typo="Typo.h6">Table</MudText>
         <MudSpacer />
-        <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+        <MudTextField T="string" ValueChanged="@(s=>OnSearch(s))" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
     </ToolBarContent>
     <HeaderContent>
         <MudTh>Name</MudTh>
         <MudTh>Email</MudTh>
         <MudTh>Phone</MudTh>
         <MudTh>Role</MudTh>
+        <MudTh>Actions</MudTh>
     </HeaderContent>
     <RowTemplate>
         <MudTd DataLabel="Name">@context.Name</MudTd>
         <MudTd DataLabel="Email">@context.Email</MudTd>
         <MudTd DataLabel="Phone">@context.Phone</MudTd>
         <MudTd DataLabel="Role">@context.Role</MudTd>
+        <MudTd DataLabel="Actions">
+            <MudIconButton Color="Color.Warning" Icon="@Icons.Material.Filled.Edit" OnClick='() => NavigationManager.NavigateTo($"adminusers/edit/{context.Id}")' />
+            <MudIconButton Color="Color.Secondary" Icon="@Icons.Material.Filled.Delete" OnClick='() => NavigationManager.NavigateTo($"adminusers/edit/{context.Id}")' />
+        </MudTd>
     </RowTemplate>
     <PagerContent>
         <MudPagination SelectedChanged="SelectedPage" Count="@MetaData.TotalPages" Class="pa-4" />
@@ -41,8 +47,11 @@
     protected MetaData MetaData = new MetaData();
     protected PagingRequest model = new PagingRequest();
 
-    public string searchString1 { get; set; }
-
+    private async Task OnSearch(string text)
+    {
+        model.SearchKey = text;
+        await Load();
+    }
 
     private async Task SelectedPage(int page)
     {
