--- a/QareebApp/Pages/Drivers/DriverEdit.razor
+++ b/QareebApp/Pages/Drivers/DriverEdit.razor
@@ -1,61 +1,50 @@
 ﻿@page "/drivers/edit/{id}"
 @inject IDriverService driverService
 @inject NavigationManager NavigationManager
-
-<div class="card bg-white">
-    <div class="card-header  d-flex justify-content-between align-items-center" style="background-color:white;">
-        <h5>
-            <i class="oi oi-people mr-2"></i>
-            Create Admin User
-        </h5>
-    </div>
-    <div class="card-body">
+<MudItem>
+    <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">Edit Driver</MudText>
+</MudItem>
+<MudCard Breakpoint="Breakpoint.SmAndDown">
+    <MudCardHeader>
+        <CardHeaderContent>
+            <MudText Typo="Typo.h6">Driver : @response?.Name</MudText>
+        </CardHeaderContent>
+    </MudCardHeader>
+    <MudCardContent>
         @if (!string.IsNullOrEmpty(error))
         {
-            <div class="alert alert-danger mt-3 mb-0">@error</div>
+            <MudAlert Severity="Severity.Error">@error</MudAlert>
         }
-        <EditForm Model="@model" OnValidSubmit="HandleValidSubmit">
-            <div class="form-group row">
-                <label for="Name" class="col-md-12 col-form-label">Name</label>
-                <div class="col-md-12">
-                    <InputText @bind-Value="model.Name" class="form-control" id="Name" />
-                    <ValidationMessage For="@(() => model.Name)" />
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="Phone" class="col-md-12 col-form-label">Phone</label>
-                <div class="col-md-12">
-                    <InputText @bind-Value="model.Phone" class="form-control" id="Phone" />
-                    <ValidationMessage For="@(() => model.Phone)" />
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="Email" class="col-md-12 col-form-label">Email</label>
-                <div class="col-md-12">
-                    <InputText @bind-Value="model.Email" class="form-control" id="Email" />
-                    <ValidationMessage For="@(() => model.Email)" />
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="Image" class="col-md-12 col-form-label">Image</label>
-                <div class="col-md-12">
-                    <InputFile OnChange="@LoadFile" id="" />
-                    <ValidationMessage For="@(() => model.Image)" />
-                </div>
-            </div>
-            <div class="form-group row mb-0">
-                <div class="col-md-12">
-                    <button type="submit" class="btn btn-success">
-                        Add @if (loading)
-                        {
-                            <Spinner />
-                        }
-                    </button>
-                </div>
-            </div>
-        </EditForm>
-    </div>
-</div>
+        <MudForm Model="@model" @onsubmit="HandleValidSubmit">
+            <MudItem>
+                <MudTextField @bind-Value="model.Name" Label="Name" Variant="Variant.Text"></MudTextField>
+            </MudItem>
+            <MudItem>
+                <MudTextField InputType="InputType.Telephone" @bind-Value="model.Phone" Label="Phone" Variant="Variant.Text"></MudTextField>
+            </MudItem>
+            <MudItem>
+                <MudTextField InputType="InputType.Email" @bind-Value="model.Email" Label="Email" Variant="Variant.Text"></MudTextField>
+            </MudItem>
+            <MudItem Style="margin-top:20px" md="4">
+                <InputFile id="fileInput112" OnChange="LoadFile" hidden accept=".jpg, .jpeg, .png" />
+                <MudButton HtmlTag="label"
+                           Variant="Variant.Filled"
+                           Color="Color.Primary"
+                           StartIcon="@Icons.Filled.CloudUpload"
+                           for="fileInput112">
+                    Upload your images
+                </MudButton>
+            </MudItem>
+            @if (model.Image != null)
+            {
+                <MudListItem Icon="@Icons.Filled.AttachFile">
+                    @model.Image.Name <code>@model.Image.Size bytes</code>
+                </MudListItem>
+            }
+            <MudButton Style="margin-top:20px" Variant="Variant.Filled" Color="Color.Success" ButtonType="ButtonType.Submit" FullWidth="true">Save</MudButton>
+        </MudForm>
+    </MudCardContent>
+</MudCard>
 
 
 @code {
@@ -64,6 +53,7 @@
     private bool loading;
     protected CreateDriverForm model = new CreateDriverForm();
     private string error;
+    private DriverResponse response;
 
     protected override async Task OnInitializedAsync()
     {
@@ -74,11 +64,12 @@
     public async Task Load()
     {
         loading = true;
-        var response = await driverService.Get(Guid.Parse(id));
-        model = new ()
+        response = await driverService.Get(Guid.Parse(id));
+        model = new()
         {
             Name = response.Name,
             Email = response.Email,
+            Phone = response.Phone,
         };
         loading = false;
     }
@@ -92,7 +83,7 @@
             var reponses = await driverService.Edit(Guid.Parse(id), model);
             if (reponses != null)
             {
-                NavigationManager.NavigateTo("/drivers");
+                NavigationManager.NavigateTo("drivers");
             }
         }
         catch (Exception ex)
