--- a/QareebApp/Pages/Orders/OrderIndex.razor
+++ b/QareebApp/Pages/Orders/OrderIndex.razor
@@ -8,17 +8,19 @@
     <ToolBarContent>
         <MudText Typo="Typo.h6">Table</MudText>
         <MudSpacer />
-        <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+        <MudTextField T="string" ValueChanged="@(s=>OnSearch(s))"  Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
     </ToolBarContent>
     <HeaderContent>
         <MudTh>Code</MudTh>
         <MudTh>C.Name</MudTh>
+        <MudTh>R.Name</MudTh>
         <MudTh>Delivery Amount</MudTh>
         <MudTh>CreatedOn</MudTh>
     </HeaderContent>
     <RowTemplate>
         <MudTd DataLabel="Code">@context.Code</MudTd>
-        <MudTd DataLabel="Name">@context.Customer.Name</MudTd>
+        <MudTd DataLabel="C.Name">@context.Customer.Name</MudTd>
+        <MudTd DataLabel="R.Name">@context.ReceiverName</MudTd>
         <MudTd DataLabel="Delivery Amount">@context.DeliveryAmount</MudTd>
         <MudTd DataLabel="CreatedOn">@context.CreatedOn.Value</MudTd>
     </RowTemplate>
@@ -58,4 +60,11 @@
     {
         await Load();
     }
+
+    private async Task OnSearch(string text)
+    {
+        model.SearchKey = text;
+        await Load();
+    }
+
 }
