--- a/QareebApp/Pages/Drivers/DriverIndex.razor
+++ b/QareebApp/Pages/Drivers/DriverIndex.razor
@@ -60,6 +60,7 @@
 
     private async Task OnSearch(string text)
     {
+        model.PageNumber = 1;
         model.SearchKey = text;
         await Load();
     }
