--- a/QareebApp/Pages/Orders/OrderIndex.razor
+++ b/QareebApp/Pages/Orders/OrderIndex.razor
@@ -63,6 +63,7 @@
 
     private async Task OnSearch(string text)
     {
+        model.PageNumber = 1;
         model.SearchKey = text;
         await Load();
     }
